--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/Files.jspf
@@ -116,9 +116,20 @@
 						  <span class="noDisplay">: </span>
 				</b>
 				<span class="double_area0 xTiny_marginLExcl xTiny_marginRIncl">
+					
+					<h:panelGroup layout="block" styleClass="double_area1 endline selectContainer">
+						<h:panelGroup layout="block" styleClass="double_area0">
+							<h:panelGroup styleClass="double_area0 selectionBox">&#160;</h:panelGroup>
+							<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+						</h:panelGroup>
+						<h:selectOneMenu id="selContentCategory" styleClass="replace" onfocus="updateSelectionBox(this);" value="#{component.file.contentCategory}" onchange="updateSelectionBox(this);">
+							<f:selectItems id="selContentCategorys" value="#{EasySubmission.contentCategories}" />
+						</h:selectOneMenu>
+					</h:panelGroup>
+				<%--
 					<h:selectOneMenu id="selContentCategory" styleClass="double_select replace" value="#{component.file.contentCategory}" >
 						<f:selectItems id="selContentCategorys" value="#{EasySubmission.contentCategories}" />
-					</h:selectOneMenu>
+					</h:selectOneMenu>	--%>
 				</span>
 			</h:panelGroup>
 		</h:panelGroup>
@@ -152,9 +163,20 @@
 					<h:panelGroup rendered="#{!(genre.files_component_visibility_display == 'false' && genre.files_component_visibility_form_id == 'easy-submission' || genre.files_component_visibility_display == 'false' && genre.files_component_visibility_form_id == 'all')}">
 						<span class="xDouble_area0 tiny_marginRIncl endline">
 							<h:outputLabel id="lblFilesComponentVisibility" styleClass="xDouble_label" value="#{genre.files_component_visibility_label}" converter="GenreLabelConverter"/>
+							
+							<h:panelGroup layout="block" styleClass="xDouble_area1 endline selectContainer" rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}">
+								<h:panelGroup layout="block" styleClass="xDouble_area0">
+									<h:panelGroup styleClass="xDouble_area0 selectionBox">&#160;</h:panelGroup>
+									<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+								</h:panelGroup>
+								<h:selectOneMenu id="selFileVisibility" styleClass="replace" onfocus="updateSelectionBox(this);" value="#{component.file.visibility}" onchange="this.form.submit();">
+									<f:selectItems id="selFileVisibilities" value="#{EasySubmission.visibilities}" />
+								</h:selectOneMenu>
+							</h:panelGroup>
+						<%--
 							<h:selectOneMenu id="selFileVisibility" styleClass="xDouble_select" value="#{component.file.visibility}" onchange="this.form.submit()">
 								<f:selectItems id="selFileVisibilities" value="#{EasySubmission.visibilities}" />
-							</h:selectOneMenu>
+							</h:selectOneMenu>	--%>
 						</span>
 					</h:panelGroup>
 					<h:panelGroup styleClass="large_area0 tiny_marginLIncl" rendered="#{component.showEmbargoDate}">
