--- a/pubman/pubman_presentation/src/main/webapp/search/ui/EventCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/EventCriterionCollection.jspf
@@ -75,9 +75,19 @@
 
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder"></h:panelGroup>
 			<h:panelGroup layout="block" styleClass="large_area0_p8 lineToolSection">
-				<h:selectOneMenu id="selEventCriterionLogicOption" styleClass="small_select xSmall_marginLIncl endline replace" value="#{eventCriterionBean.logicOperator}">
+				
+				<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer marginTExcl6p xSmall_marginLExcl">
+					<h:panelGroup layout="block" styleClass="small_area0">
+						<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+					</h:panelGroup>
+					<h:selectOneMenu id="selEventCriterionLogicOption" styleClass="small_select replace" value="#{eventCriterionBean.logicOperator}" onfocus="updateSelectionBox(this);" onchange="updateSelectionBox(this);">
+						<f:selectItems value="#{eventCriterionBean.logicOptions}" />
+					</h:selectOneMenu>
+				</h:panelGroup>
+		<%--	<h:selectOneMenu id="selEventCriterionLogicOption" styleClass="small_select xSmall_marginLIncl endline replace" value="#{eventCriterionBean.logicOperator}">
 					<f:selectItems value="#{eventCriterionBean.logicOptions}"/>
-				</h:selectOneMenu>				
+				</h:selectOneMenu>	 --%>
 			</h:panelGroup>
 
 		</tr:iterator>
