--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -56,7 +56,7 @@
 							<h:outputText value="#{lbl.ViewItemFull_lblNoAccess}" rendered="#{ViewItemFull.isStateWithdrawn}"/>
 							<h:outputText value=", #{file.fileSize}"/>
 						</div>
-						<div class="xHuge_area0 endline marginTExcl075">
+						<div class="xHuge_area0 endline marginTExcl6p">
 							<tr:goLink id="lnkCitationURL" targetFrame="_blank" destination="#{ViewItemFull.citationURL}/component/#{file.file.reference.objectId}/#{file.file.name}" shortDesc="#{lbl.ViewItemFull_lblPdfWarning}" rendered="#{!(file.showSearchHits and file.file.mimeType=='application/pdf') and !ViewItemFull.isStateWithdrawn and (file.isVisible || ViewItemFull.isOwner || ViewItemFull.isModerator || ViewItemFull.isPrivilegedViewer || file.isAudience)}">
 								<span class="viewFileIcon"></span>
 								<h:outputText value="#{lbl.ViewItemFull_lblViewFulltext}" />
