--- a/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/CreatorCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/easySubmission/steps/ui/CreatorCollection.jspf
@@ -87,13 +87,37 @@ All rights reserved. Use is subject to license terms.
 					<h:panelGroup layout="block" styleClass="free_area0 endline" rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'easy-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 						<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
 						<span class="xTiny_area0">&nbsp;</span>
-						<%-- Creator role --%>
+					<%-- Creator role --%>
+						
+						<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer" 
+							rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'easy-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
+							<h:panelGroup layout="block" styleClass="small_area0">
+								<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+								<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+							</h:panelGroup>
+							<h:selectOneMenu id="selCreatorRoleString" onfocus="updateSelectionBox(this);" value="#{creator.roleString}" onchange="updateSelectionBox(this);">
+								<f:selectItems value="#{EasySubmissionSessionBean.creatorRoles}" />
+							</h:selectOneMenu>
+						</h:panelGroup>
+					<%--
 						<h:selectOneMenu id="selCreatorRoleString" styleClass="small_select" value="#{creator.roleString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'easy-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
 							<f:selectItems value="#{EasySubmissionSessionBean.creatorRoles}"/>
-						</h:selectOneMenu>
+						</h:selectOneMenu>	--%>
+						
+						<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer" 
+							rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'easy-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}">
+							<h:panelGroup layout="block" styleClass="small_area0">
+								<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+								<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+							</h:panelGroup>
+							<h:selectOneMenu id="selcreatorTypeString" onfocus="updateSelectionBox(this);" value="#{creator.typeString}" onchange="submit();">
+								<f:selectItems value="#{EasySubmissionSessionBean.creatorTypes}" />
+							</h:selectOneMenu>
+						</h:panelGroup>
+					<%--
 						<h:selectOneMenu id="selcreatorTypeString" value="#{creator.typeString}" styleClass="small_select" rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'easy-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}" onchange="submit();">
 							<f:selectItems value="#{EasySubmissionSessionBean.creatorTypes}"/>
-						</h:selectOneMenu>
+						</h:selectOneMenu>	--%>
 						<h:inputText id="inpcreator_persons_person_family_name_optional" styleClass="large_txtInput personSuggest familyName" value="#{creator.person.familyName}" rendered="#{!(genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'easy-submission' || genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'all')}"/>
 						<h:inputText id="inppersons_person_given_name_optional" styleClass="large_txtInput givenName" value="#{creator.person.givenName}"/>
 						<h:inputText id="inpcreator_hidden_organizations" styleClass="noDisplay organizationPasteField" value="#{creator.autoPasteValue}"/>
@@ -113,12 +137,36 @@ All rights reserved. Use is subject to license terms.
 						<%-- Creator role --%>
 						<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
 						<span class="xTiny_area0">&nbsp;</span>
+						
+						<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer" 
+							rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'easy-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
+							<h:panelGroup layout="block" styleClass="small_area0">
+								<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+								<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+							</h:panelGroup>
+							<h:selectOneMenu id="selCreatorOrgRoleString" onfocus="updateSelectionBox(this);" value="#{creator.roleString}" onchange="updateSelectionBox(this);">
+								<f:selectItems value="#{EasySubmissionSessionBean.creatorRoles}" />
+							</h:selectOneMenu>
+						</h:panelGroup>
+					<%--
 						<h:selectOneMenu id="selCreatorOrgRoleString" styleClass="small_select" value="#{creator.roleString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'easy-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
 							<f:selectItems value="#{EasySubmissionSessionBean.creatorRoles}"/>
-						</h:selectOneMenu>
+						</h:selectOneMenu>	--%>
+						
+						<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer" 
+							rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'easy-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}">
+							<h:panelGroup layout="block" styleClass="small_area0">
+								<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+								<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+							</h:panelGroup>
+							<h:selectOneMenu id="selcreatorOrgTypeString" onfocus="updateSelectionBox(this);" value="#{creator.typeString}" onchange="submit();">
+								<f:selectItems value="#{EasySubmissionSessionBean.creatorTypes}" />
+							</h:selectOneMenu>
+						</h:panelGroup>
+					<%--
 						<h:selectOneMenu id="selcreatorOrgTypeString" styleClass="small_select" value="#{creator.typeString}" rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'easy-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}" onchange="submit();">
 							<f:selectItems value="#{EasySubmissionSessionBean.creatorTypes}"/>
-						</h:selectOneMenu>
+						</h:selectOneMenu>	--%>
 						<h:inputText id="inpcreator_organization_name_optional" styleClass="huge_txtInput organizationSuggest organizationName xSmall_marginRExcl" value="#{creator.organization.name.value}" rendered="#{!(genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'easy-submission' || genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'all')}"/>
 						<h:inputText id="inpcreator_organization_identifier_optional" styleClass="noDisplay organizationIdentifier small_marginRExcl" value="#{creator.organization.identifier}"/>
 					
