--- a/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
@@ -84,9 +84,20 @@
 						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_content_category_display != 'true'}" /><h:outputText value="#{genre.locators_component_content_category_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
 					</b>
 					<span class="double_area0 xTiny_marginLExcl xTiny_marginRIncl">
+						
+						<h:panelGroup layout="block" styleClass="double_area1 endline selectContainer">
+							<h:panelGroup layout="block" styleClass="double_area0">
+								<h:panelGroup styleClass="double_area0 selectionBox">&#160;</h:panelGroup>
+								<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+							</h:panelGroup>
+							<h:selectOneMenu id="selLocatorContentCategory" styleClass="replace" value="#{locator.file.contentCategory}" onfocus="updateSelectionBox(this);" onchange="updateSelectionBox(this);">
+								<f:selectItems value="#{EditItem.contentCategories}" />
+							</h:selectOneMenu>
+						</h:panelGroup>
+					<%--
 						<h:selectOneMenu id="selLocatorContentCategory" styleClass="double_select replace" value="#{locator.file.contentCategory}" >
 	        				<f:selectItems value="#{EditItem.contentCategories}" />
-	       				</h:selectOneMenu>
+	       				</h:selectOneMenu>	--%>
 					</span>
 				</h:panelGroup>
 			</h:panelGroup>
