--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -88,37 +88,49 @@
 	<span class="full_area0">
 		<tr:iterator id="iterCreatorOrganisationAuthors" var="creator" value="#{EditItemSessionBean.creators}" rows="0">
 			<h:panelGroup layout="block" styleClass="full_area0 suggestAnchor endline">
+			
 <%-- Creator person family name, Creator person given name --%>
 				<h:panelGroup layout="block" styleClass="free_area0 endline" rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'easy-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
 					<span class="xTiny_area0">&nbsp;</span>
-					<div class="small_area0 endline selectContainer">
-						<div class="small_area0">
-							<span style="white-space:nowrap; width:3.7272em;" class="free_area0 selectionBox">Deutsch</span>
-							<div style="padding-right:1.1818em;" class="selectboxIcon">&nbsp;</div>
-						</div>
-						<select title="Sprachauswahl." onchange="submit();" size="1" name="Header:selSelectLocale" id="Header:selSelectLocale">	
-							<option value="en">English</option>
-							<option selected="" value="de">Deutsch</option>
-							<option value="ja"></option>
-						</select>
-					</div>
 				</h:panelGroup>
 				<div class="clear">&#160;</div>
 				<h:panelGroup layout="block" styleClass="free_area0 endline"
 					rendered="#{creator.personType and !(genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_display == 'false' && genre.creator_person_organization_creator_persons_form_id == 'all')}">
 					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
 					<span class="xTiny_area0">&nbsp;</span>
-<%-- Creator role --%>
-					<h:selectOneMenu id="selCreatorRoleString" styleClass="small_select" value="#{creator.roleString}"
+					
+					<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer"
+						rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
+						<h:panelGroup layout="block" styleClass="small_area0">
+							<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+							<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+						</h:panelGroup>
+						<h:selectOneMenu id="selCreatorRoleString" onfocus="updateSelectionBox(this);" value="#{creator.roleString}" onchange="updateSelectionBox(this);">
+							<f:selectItems value="#{EditItemSessionBean.creatorRoles}" />
+						</h:selectOneMenu>
+					</h:panelGroup>
+<%-- Creator role 	<h:selectOneMenu id="selCreatorRoleString" styleClass="small_select" value="#{creator.roleString}"
 						rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
 						<f:selectItems value="#{EditItemSessionBean.creatorRoles}" />
-					</h:selectOneMenu>
-					<h:selectOneMenu id="selcreatorTypeString" value="#{creator.typeString}" styleClass="small_select"
+					</h:selectOneMenu> --%>
+										
+					<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer"
+						rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}">
+						<h:panelGroup layout="block" styleClass="small_area0">
+							<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+							<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+						</h:panelGroup>
+						<h:selectOneMenu id="selcreatorTypeString" onfocus="updateSelectionBox(this);" value="#{creator.typeString}" onchange="submit();">
+							<f:selectItems value="#{EditItemSessionBean.creatorTypes}" />
+						</h:selectOneMenu>
+					</h:panelGroup>
+<%-- Creator role 	<h:selectOneMenu id="selcreatorTypeString" value="#{creator.typeString}" styleClass="small_select"
 						rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}"
 						onchange="submit();">
 						<f:selectItems value="#{EditItemSessionBean.creatorTypes}" />
 					</h:selectOneMenu>
+					--%>
 					<h:inputText id="inpcreator_persons_person_family_name_optional"
 						styleClass="large_txtInput personSuggest familyName" value="#{creator.person.familyName}"
 						rendered="#{!(genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'full-submission' || genre.creator_person_organization_creator_persons_person_family_name_display == 'false' && genre.creator_person_organization_creator_persons_person_family_name_form_id == 'all')}" />
@@ -151,26 +163,47 @@
 <%-- Creator role --%>
 					<span class="large_area0 xSmall_marginRExcl">&nbsp;</span>
 					<span class="xTiny_area0">&nbsp;</span>
-					<h:selectOneMenu id="selCreatorOrgRoleString" styleClass="small_select" value="#{creator.roleString}"
+					
+					<h:panelGroup layout="block" styleClass="medium_area1 endline selectContainer" 
+						rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
+						<div class="medium_area0">
+							<span class="small_area0 selectionBox" style="white-space:nowrap;">&#160;</span>
+							<div class="selectboxIcon" style="padding-right:1.1818em;">&#160;</div>
+						</div>
+						<h:selectOneMenu id="selCreatorOrgRoleString" onfocus="updateSelectionBox(this);" value="#{creator.roleString}" styleClass="small_select" onchange="updateSelectionBox(this);">
+							<f:selectItems value="#{EditItemSessionBean.creatorRoles}" />
+						</h:selectOneMenu>
+					</h:panelGroup>
+			<%--	<h:selectOneMenu id="selCreatorOrgRoleString" styleClass="small_select" value="#{creator.roleString}"
 						rendered="#{!(genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_display == 'false' && genre.creator_person_organization_creator_select_roles_form_id == 'all')}">
 						<f:selectItems value="#{EditItemSessionBean.creatorRoles}" />
-					</h:selectOneMenu>
-					<h:selectOneMenu id="selcreatorOrgTypeString" styleClass="small_select" value="#{creator.typeString}"
+					</h:selectOneMenu> --%>		
+					
+					<h:panelGroup layout="block" styleClass="medium_area1 endline selectContainer" 
+						rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}">
+						<div class="medium_area0">
+							<span class="small_area0 selectionBox" style="white-space:nowrap;">&#160;</span>
+							<div class="selectboxIcon" style="padding-right:1.1818em;">&#160;</div>
+						</div>
+						<h:selectOneMenu id="selcreatorOrgTypeString" onfocus="updateSelectionBox(this);" value="#{creator.typeString}" styleClass="small_select" onchange="submit();">
+							<f:selectItems value="#{EditItemSessionBean.creatorTypes}" />
+						</h:selectOneMenu>
+					</h:panelGroup>
+			<%--	<h:selectOneMenu id="selcreatorOrgTypeString" styleClass="small_select" value="#{creator.typeString}"
 						rendered="#{!(genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'full-submission' || genre.creator_person_organization_creator_select_roles_creator_type_display == 'false' && genre.creator_person_organization_creator_select_roles_creator_type_form_id == 'all')}"
 						onchange="submit();">
 						<f:selectItems value="#{EditItemSessionBean.creatorTypes}" />
-					</h:selectOneMenu>
-					<h:inputText id="inpcreator_organization_name_optional"
-						styleClass="huge_txtInput organizationSuggest organizationName xSmall_marginRExcl"
+					</h:selectOneMenu>	--%>
+					
+					<h:inputText id="inpcreator_organization_name_optional" styleClass="huge_txtInput organizationSuggest organizationName xSmall_marginRExcl"
 						value="#{creator.organization.name.value}"
 						rendered="#{!(genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'full-submission' || genre.creator_person_organization_creator_organizations_organization_name_display == 'false' && genre.creator_person_organization_creator_organizations_organization_name_form_id == 'all')}" />
-					<h:inputText id="inpcreator_organization_identifier_optional"
-						styleClass="noDisplay organizationIdentifier small_marginRExcl" value="#{creator.organization.identifier}" />
+					<h:inputText id="inpcreator_organization_identifier_optional" styleClass="noDisplay organizationIdentifier small_marginRExcl" value="#{creator.organization.identifier}" />
 					<h:outputLink styleClass="min_imgBtn ouCard ouLink"
 						rendered="#{creator.organization.identifier != null and creator.organization.identifier != ''}" value="#"
 						onclick="openCenteredWindow('AffiliationDetailPage.jsp?id=#{creator.organization.identifier}', 980, 400, 'Details');return false">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h:outputLink>
 					<h:panelGroup rendered="#{creator.organization.identifier == null || creator.organization.identifier == ''}"
-						styleClass="min_imgBtn ouLink">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h:panelGroup>
+						styleClass="xSmall_area0 min_imgBtn ouLink">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</h:panelGroup>
 					<h:panelGroup layout="block">
 						<tr:commandButton id="btnAddCreatorOrg" shortDesc="#{tip.EditItem_addCreator}"
 							styleClass="min_imgBtn groupTool add" action="#{creator.add}"
