--- a/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/gridList.jspf
@@ -55,13 +55,28 @@ All rights reserved. Use is subject to license terms.
  <div class="full_area0 paginator">
 
  	<div class="large_area0 small_marginLIncl rangeSelector">
- 		<h:selectOneMenu id="extSelectTop" styleClass="free_select" value="#{PubItemListSessionBean.elementsPerPageTop}" onchange="$(this).parents('div').find('.hiddenElementsNumberChangedButton').click();">
+ 		
+ 		<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer">
+			<h:panelGroup layout="block" styleClass="small_area0">
+				<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+				<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+			</h:panelGroup>
+			<h:selectOneMenu id="extSelectTop" value="#{PubItemListSessionBean.elementsPerPageTop}" onfocus="updateSelectionBox(this);" onchange="$(this).parents('div').find('.hiddenElementsNumberChangedButton').click();">
+				<f:selectItem itemValue="10" itemLabel="10"></f:selectItem>
+				<f:selectItem itemValue="25" itemLabel="25"></f:selectItem>
+				<f:selectItem itemValue="50" itemLabel="50"></f:selectItem>
+				<f:selectItem itemValue="100" itemLabel="100"></f:selectItem>
+				<f:selectItem itemValue="250" itemLabel="250"></f:selectItem>
+			</h:selectOneMenu>
+		</h:panelGroup>
+<%--	<h:selectOneMenu id="extSelectTop" styleClass="free_select" value="#{PubItemListSessionBean.elementsPerPageTop}" onchange="$(this).parents('div').find('.hiddenElementsNumberChangedButton').click();">
  			<f:selectItem itemValue="10" itemLabel="10"></f:selectItem>
  			<f:selectItem itemValue="25" itemLabel="25"></f:selectItem>
  			<f:selectItem itemValue="50" itemLabel="50"></f:selectItem>
  			<f:selectItem itemValue="100" itemLabel="100"></f:selectItem>
  			<f:selectItem itemValue="250" itemLabel="250"></f:selectItem>
- 		</h:selectOneMenu>
+ 		</h:selectOneMenu>	--%>
+		
 		<h:commandButton id="btChangeElementsPerPageTop" styleClass="xTiny_txtBtn paginatorFallbackGoBtn hiddenElementsNumberChangedButton"  value="go"  action="#{PubItemListSessionBean.changeElementsPerPageTop}"/>
  		<h:outputLabel id="lblItemList_ObjectsPerPage" for="extSelectTop" styleClass="free_label hitsLabel" value=" #{lbl.ItemList_ObjectsPerPage}" />
  	</div>
@@ -339,13 +354,28 @@ All rights reserved. Use is subject to license terms.
 
  
  	<div class="large_area0 small_marginLIncl rangeSelector">
- 		<h:selectOneMenu id="extSelectBottom" styleClass="free_select" value="#{PubItemListSessionBean.elementsPerPageBottom}" onchange="$(this).parents('div').find('.hiddenElementsNumberChangedButton').click();">
+ 		
+ 		<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer">
+			<h:panelGroup layout="block" styleClass="small_area0">
+				<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+				<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+			</h:panelGroup>
+			<h:selectOneMenu id="extSelectBottom" value="#{PubItemListSessionBean.elementsPerPageBottom}" onfocus="updateSelectionBox(this);" onchange="$(this).parents('div').find('.hiddenElementsNumberChangedButton').click();">
+				<f:selectItem itemValue="10" itemLabel="10"></f:selectItem>
+				<f:selectItem itemValue="25" itemLabel="25"></f:selectItem>
+				<f:selectItem itemValue="50" itemLabel="50"></f:selectItem>
+				<f:selectItem itemValue="100" itemLabel="100"></f:selectItem>
+				<f:selectItem itemValue="250" itemLabel="250"></f:selectItem>
+			</h:selectOneMenu>
+		</h:panelGroup>
+<%--	<h:selectOneMenu id="extSelectBottom" styleClass="free_select" value="#{PubItemListSessionBean.elementsPerPageBottom}" onchange="$(this).parents('div').find('.hiddenElementsNumberChangedButton').click();">
  			<f:selectItem itemValue="10" itemLabel="10"></f:selectItem>
  			<f:selectItem itemValue="25" itemLabel="25"></f:selectItem>
  			<f:selectItem itemValue="50" itemLabel="50"></f:selectItem>
  			<f:selectItem itemValue="100" itemLabel="100"></f:selectItem>
  			<f:selectItem itemValue="250" itemLabel="250"></f:selectItem>
- 		</h:selectOneMenu>
+ 		</h:selectOneMenu>	--%>
+		
 		<h:commandButton styleClass="xTiny_txtBtn paginatorFallbackGoBtn hiddenElementsNumberChangedButton"  value="go"  action="#{PubItemListSessionBean.changeElementsPerPageBottom}"/>
  		<h:outputLabel for="extSelectTop" styleClass="free_label hitsLabel" value=" #{lbl.ItemList_ObjectsPerPage}" />
  	</div>
