--- a/pubman/pubman_presentation/src/main/webapp/search/ui/AnyFieldCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/AnyFieldCriterionCollection.jspf
@@ -82,9 +82,19 @@
 			</h:panelGroup>
 
 			<h:panelGroup layout="block" styleClass="large_area0_p8 lineToolSection">
-				<h:selectOneMenu id="selAnyFieldCriterionLogicOption" styleClass="small_select xSmall_marginLIncl endline replace" value="#{anyFieldCriterionBean.logicOperator}">
+				
+				<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer marginTExcl6p xSmall_marginLExcl">
+					<h:panelGroup layout="block" styleClass="small_area0">
+						<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+					</h:panelGroup>
+					<h:selectOneMenu id="selAnyFieldCriterionLogicOption" styleClass="small_select replace" value="#{anyFieldCriterionBean.logicOperator}" onfocus="updateSelectionBox(this);" onchange="updateSelectionBox(this);">
+						<f:selectItems value="#{anyFieldCriterionBean.logicOptions}" />
+					</h:selectOneMenu>
+				</h:panelGroup>
+		<%--	<h:selectOneMenu id="selAnyFieldCriterionLogicOption" styleClass="small_select xSmall_marginLIncl endline replace" value="#{anyFieldCriterionBean.logicOperator}">
 					<f:selectItems value="#{anyFieldCriterionBean.logicOptions}"/>
-				</h:selectOneMenu>
+				</h:selectOneMenu>	 --%>
 			</h:panelGroup>
 
 		</tr:iterator>
