--- a/pubman/pubman_presentation/src/main/webapp/search/ui/ContextCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/ContextCriterionCollection.jspf
@@ -45,37 +45,59 @@
 					&#160;<span class="noDisplay"> </span>
 				</b>
 
-				<span class="xHuge_area0 xTiny_marginLExcl endline">
+				<h:panelGroup styleClass="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputLabel id="context" styleClass="noDisplay" value="#{contextCriterionBean.context}"/>
-<!-- 
-					<b class="quad_label">&#160;</b>
-	 -->				
-					<div class="free_area1 third_txtInput endline selectContainer marginTExcl6p">
-						<div class="free_area0 third_txtInput">
-							<span class="free_area0 third_txtInput selectionBox" style="white-space:nowrap; width:32.4545em;">
-							<h:outputText value="#{contextCriterionBean.contextName}" rendered="#{contextCriterionBean.contextCriterionVO.searchString != null}"/>
-							<h:outputText value="--" rendered="#{contextCriterionBean.contextCriterionVO.searchString == null}"/>
-							</span>
-							<div class="selectboxIcon" style="margin-right:0.3636em;">&nbsp;</div>
-						</div>
-						<h:selectOneMenu onchange="submit();" id="selectContext" value="#{contextCriterionBean.contextCriterionVO.searchString}">
-							<f:selectItems value="#{AdvancedSearchEdit.contextCriterionCollection.contextList}"/>
+<%-- 				<b class="quad_label">&#160;</b> 	--%>				
+	 	<!-- Collection -->
+	 				
+	 				<h:panelGroup layout="block" styleClass="quad_area1 endline selectContainer marginTExcl6p">
+						<h:panelGroup layout="block" styleClass="quad_area0">
+							<h:panelGroup styleClass="quad_area0 selectionBox">&#160;
+				<%-- 			<h:outputText value="#{contextCriterionBean.contextName}" rendered="#{contextCriterionBean.contextCriterionVO.searchString != null}"/>
+								<h:outputText value="--" rendered="#{contextCriterionBean.contextCriterionVO.searchString == null}"/>
+				 --%>
+							</h:panelGroup>
+							<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+						</h:panelGroup>
+						<h:selectOneMenu id="selectContext" onfocus="updateSelectionBox(this);" value="#{contextCriterionBean.contextCriterionVO.searchString}" onchange="submit();">
+							<f:selectItems value="#{AdvancedSearchEdit.contextCriterionCollection.contextList}" />
 						</h:selectOneMenu>
-					</div>
-					
-				</span>
-				<span class="large_area0_p8 lineToolSection">
+					</h:panelGroup>
+	 				
+				</h:panelGroup>
+				<h:panelGroup styleClass="large_area0_p8 lineToolSection">
 					<tr:commandButton id="btnAddFollowing" styleClass="min_imgBtn groupTool add" text=" " shortDesc="#{tip.search_btAdd}" action="#{AdvancedSearchEdit.contextCriterionCollection.contextCriterionManager.addObject}" />
 					<tr:commandButton id="btnRemoveFollowing" styleClass="min_imgBtn groupTool remove" text=" " shortDesc="#{tip.search_btRemove}" disabled="#{AdvancedSearchEdit.contextCriterionCollection.contextCriterionManager.size == 1}" action="#{AdvancedSearchEdit.contextCriterionCollection.contextCriterionManager.removeObject}"/>
-				</span>
+				</h:panelGroup>
 			</h:panelGroup>
-				
+			
             <h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder"></h:panelGroup>
             <h:panelGroup layout="block" styleClass="large_area0_p8 lineToolSection">
-                <h:selectOneMenu styleClass="small_select xSmall_marginLIncl endline replace" value="#{contextCriterionBean.logicOperator}">
+            	
+            	<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer marginTExcl6p xSmall_marginLExcl">
+					<h:panelGroup layout="block" styleClass="small_area0">
+						<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+					</h:panelGroup>
+					<h:selectOneMenu onfocus="updateSelectionBox(this);" value="#{contextCriterionBean.logicOperator}" styleClass="small_select replace" onchange="updateSelectionBox(this);">
+						<f:selectItems value="#{contextCriterionBean.logicOptions}" />
+					</h:selectOneMenu>
+				</h:panelGroup>
+		<%--	<h:selectOneMenu styleClass="small_select xSmall_marginLIncl endline replace" value="#{contextCriterionBean.logicOperator}">
                     <f:selectItems value="#{contextCriterionBean.logicOptions}"/>
-                </h:selectOneMenu>           
+                </h:selectOneMenu>	--%>           
 			</h:panelGroup>
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
+			
 			<%--
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder"></h:panelGroup>
 			<h:panelGroup layout="block" styleClass="large_area0_p8 lineToolSection">
@@ -93,7 +115,7 @@
 			</h:panelGroup>
 			 --%>
 		</tr:iterator>
-		<a class="free_area0 collapse advSearchCollapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.adv_search_lbHeaderCollection}" /></a>
+		<a class="clear free_area0 collapse advSearchCollapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.adv_search_lbHeaderCollection}" /></a>
 	</div>
 	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup} #{lbl.adv_search_lbHeaderCollection}" /></a>
 </div>
