--- a/pubman/pubman_presentation/src/main/webapp/search/ui/LanguageCriterionCollection.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/search/ui/LanguageCriterionCollection.jspf
@@ -1,31 +1,31 @@
 <%
-            /* 
-            CDDL HEADER START
+/* 
+CDDL HEADER START
 
-            The contents of this file are subject to the terms of the
-            Common Development and Distribution License, Version 1.0 only
-            (the "License"). You may not use this file except in compliance
-            with the License.
+The contents of this file are subject to the terms of the
+Common Development and Distribution License, Version 1.0 only
+(the "License"). You may not use this file except in compliance
+with the License.
 
-            You can obtain a copy of the license at license/ESCIDOC.LICENSE
-            or http://www.escidoc.de/license.
-            See the License for the specific language governing permissions
-            and limitations under the License.
+You can obtain a copy of the license at license/ESCIDOC.LICENSE
+or http://www.escidoc.de/license.
+See the License for the specific language governing permissions
+and limitations under the License.
 
-            When distributing Covered Code, include this CDDL HEADER in each
-            file and include the License file at license/ESCIDOC.LICENSE.
-            If applicable, add the following below this CDDL HEADER, with the
-            fields enclosed by brackets "[]" replaced with your own identifying
-            information: Portions Copyright [yyyy] [name of copyright owner]
+When distributing Covered Code, include this CDDL HEADER in each
+file and include the License file at license/ESCIDOC.LICENSE.
+If applicable, add the following below this CDDL HEADER, with the
+fields enclosed by brackets "[]" replaced with your own identifying
+information: Portions Copyright [yyyy] [name of copyright owner]
 
-            CDDL HEADER END
+CDDL HEADER END
 
 
-            Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
-            für wissenschaftlich-technische Information mbH and Max-Planck-
-            Gesellschaft zur Förderung der Wissenschaft e.V.
-            All rights reserved. Use is subject to license terms.
-             */
+Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
+für wissenschaftlich-technische Information mbH and Max-Planck-
+Gesellschaft zur Förderung der Wissenschaft e.V.
+All rights reserved. Use is subject to license terms.
+ */
 %>
 <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f" %>
 <%@ taglib uri="http://java.sun.com/jsf/html" prefix="h" %>
@@ -47,9 +47,19 @@
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputLabel id="lblLanguageTerm" styleClass="quad_label" value="#{lbl.adv_search_lblLanguageTerm}" />
 					<h:inputText id="languageSuggest" styleClass="large_txtInput tiny_marginRIncl languageSuggest" />
-					<h:selectOneMenu id="selLanguageOptions" styleClass="xDouble_select replace" value="#{languageCriterionBean.languageCriterionVO.searchString}">
+					
+					<h:panelGroup layout="block" styleClass="xDouble_area1 endline selectContainer marginTExcl6p xSmall_marginLExcl">
+						<h:panelGroup layout="block" styleClass="xDouble_area0">
+							<h:panelGroup styleClass="xDouble_area0 selectionBox">&#160;</h:panelGroup>
+							<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+						</h:panelGroup>
+						<h:selectOneMenu id="selLanguageOptions" styleClass="replace" value="#{languageCriterionBean.languageCriterionVO.searchString}" onfocus="updateSelectionBox(this);" onchange="updateSelectionBox(this);">
+							<f:selectItems value="#{languageCriterionBean.languageOptions}" />
+						</h:selectOneMenu>
+					</h:panelGroup>
+			<%--	<h:selectOneMenu id="selLanguageOptions" styleClass="xDouble_select replace" value="#{languageCriterionBean.languageCriterionVO.searchString}">
 						<f:selectItems value="#{languageCriterionBean.languageOptions}"/>
-					</h:selectOneMenu>
+					</h:selectOneMenu>	 --%>
 				</span>
 				<span class="large_area0_p8 lineToolSection">
 					<tr:commandButton id="btnAdd" styleClass="min_imgBtn groupTool add" text=" " shortDesc="#{tip.search_btAdd}" action="#{AdvancedSearchEdit.languageCriterionCollection.languageCriterionManager.addObject}" />
@@ -66,9 +76,19 @@
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:outputLabel id="lblLanguageTermMultiple" styleClass="quad_label" value="#{lbl.adv_search_lblLanguageTerm}" />
 					<h:inputText id="languageSuggestMultiple" styleClass="large_txtInput tiny_marginRIncl languageSuggest" />
-					<h:selectOneMenu id="selLanguageOptionsMultiple" styleClass="xDouble_select replace" value="#{languageCriterionBean.languageCriterionVO.searchString}">
+					
+					<h:panelGroup layout="block" styleClass="xDouble_area1 endline selectContainer marginTExcl6p xSmall_marginLExcl">
+						<h:panelGroup layout="block" styleClass="xDouble_area0">
+							<h:panelGroup styleClass="xDouble_area0 selectionBox">&#160;</h:panelGroup>
+							<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+						</h:panelGroup>
+						<h:selectOneMenu id="selLanguageOptionsMultiple" styleClass="replace" value="#{languageCriterionBean.languageCriterionVO.searchString}" onfocus="updateSelectionBox(this);" onchange="updateSelectionBox(this);">
+							<f:selectItems value="#{languageCriterionBean.languageOptions}" />
+						</h:selectOneMenu>
+					</h:panelGroup>
+			<%--	<h:selectOneMenu id="selLanguageOptionsMultiple" styleClass="xDouble_select replace" value="#{languageCriterionBean.languageCriterionVO.searchString}">
 						<f:selectItems value="#{languageCriterionBean.languageOptions}"/>
-					</h:selectOneMenu>
+					</h:selectOneMenu>	 --%>
 				</span>
 				<span class="large_area0_p8 lineToolSection">
 					<tr:commandButton id="btnAddMultiple" styleClass="min_imgBtn groupTool add" text=" " shortDesc="#{tip.search_btAdd}" action="#{AdvancedSearchEdit.languageCriterionCollection.languageCriterionManager.addObject}" />
@@ -81,9 +101,19 @@
 
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder"></h:panelGroup>
 			<h:panelGroup layout="block" styleClass="large_area0_p8 lineToolSection" rendered="#{AdvancedSearchEdit.languageCriterionCollection.languageCriterionManager.size != (languageCriterionIterator.rowIndex + 1)}">
-				<h:selectOneMenu id="selLanguageCriterionLogicOption" styleClass="small_select xSmall_marginLIncl endline replace" value="#{languageCriterionBean.logicOperator}">
+				
+				<h:panelGroup layout="block" styleClass="small_area1 endline selectContainer marginTExcl6p xSmall_marginLExcl">
+					<h:panelGroup layout="block" styleClass="small_area0">
+						<h:panelGroup styleClass="small_area0 selectionBox">&#160;</h:panelGroup>
+						<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+					</h:panelGroup>
+					<h:selectOneMenu id="selLanguageCriterionLogicOption" styleClass="small_select replace" value="#{languageCriterionBean.logicOperator}" onfocus="updateSelectionBox(this);" onchange="updateSelectionBox(this);">
+						<f:selectItems value="#{languageCriterionBean.logicOptions}" />
+					</h:selectOneMenu>
+				</h:panelGroup>
+		<%--	<h:selectOneMenu id="selLanguageCriterionLogicOption" styleClass="small_select xSmall_marginLIncl endline replace" value="#{languageCriterionBean.logicOperator}">
 					<f:selectItems value="#{languageCriterionBean.logicOptions}"/>
-				</h:selectOneMenu>				
+				</h:selectOneMenu>	 --%>
 			</h:panelGroup>
 
 		</tr:iterator>
