--- a/pubman/pubman_presentation/src/main/webapp/workspaces/ReportWorkspace.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/workspaces/ReportWorkspace.jspf
@@ -1,31 +1,31 @@
 <%
-            /* 
-            CDDL HEADER START
+/* 
+CDDL HEADER START
 
-            The contents of this file are subject to the terms of the
-            Common Development and Distribution License, Version 1.0 only
-            (the "License"). You may not use this file except in compliance
-            with the License.
+The contents of this file are subject to the terms of the
+Common Development and Distribution License, Version 1.0 only
+(the "License"). You may not use this file except in compliance
+with the License.
 
-            You can obtain a copy of the license at license/ESCIDOC.LICENSE
-            or http://www.escidoc.de/license.
-            See the License for the specific language governing permissions
-            and limitations under the License.
+You can obtain a copy of the license at license/ESCIDOC.LICENSE
+or http://www.escidoc.de/license.
+See the License for the specific language governing permissions
+and limitations under the License.
 
-            When distributing Covered Code, include this CDDL HEADER in each
-            file and include the License file at license/ESCIDOC.LICENSE.
-            If applicable, add the following below this CDDL HEADER, with the
-            fields enclosed by brackets "[]" replaced with your own identifying
-            information: Portions Copyright [yyyy] [name of copyright owner]
+When distributing Covered Code, include this CDDL HEADER in each
+file and include the License file at license/ESCIDOC.LICENSE.
+If applicable, add the following below this CDDL HEADER, with the
+fields enclosed by brackets "[]" replaced with your own identifying
+information: Portions Copyright [yyyy] [name of copyright owner]
 
-            CDDL HEADER END
+CDDL HEADER END
 
 
-            Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
-            für wissenschaftlich-technische Information mbH and Max-Planck-
-            Gesellschaft zur Förderung der Wissenschaft e.V.
-            All rights reserved. Use is subject to license terms.
-             */
+Copyright 2006-2011 Fachinformationszentrum Karlsruhe Gesellschaft
+für wissenschaftlich-technische Information mbH and Max-Planck-
+Gesellschaft zur Förderung der Wissenschaft e.V.
+All rights reserved. Use is subject to license terms.
+ */
 %>
 
 <%@ taglib uri="http://java.sun.com/jsf/core" prefix="f"%>
@@ -70,9 +70,19 @@
 					</b>
 					<span class="free_area0 endline">
 					<div class="xSmall_marginLExcl clear">
-						<h:selectOneMenu id="selFormat" value="#{ReportWorkspaceBean.format}" converter="#{ReportWorkspaceBean.formatConverter}">
+						
+						<h:panelGroup layout="block" styleClass="large_area1 endline selectContainer marginTExcl6p xSmall_marginLExcl">
+							<h:panelGroup layout="block" styleClass="large_area0">
+								<h:panelGroup styleClass="large_area0 selectionBox">&#160;</h:panelGroup>
+								<h:panelGroup layout="block" styleClass="min_imgArea selectboxIcon">&#160;</h:panelGroup>
+							</h:panelGroup>
+							<h:selectOneMenu id="selFormat" value="#{ReportWorkspaceBean.format}" onfocus="updateSelectionBox(this);" onchange="updateSelectionBox(this);" converter="#{ReportWorkspaceBean.formatConverter}">
+								<f:selectItems id="selFormats" value="#{ReportWorkspaceBean.outputFormats}" />
+							</h:selectOneMenu>
+						</h:panelGroup>
+				<%--	<h:selectOneMenu id="selFormat" value="#{ReportWorkspaceBean.format}" converter="#{ReportWorkspaceBean.formatConverter}">
 							<f:selectItems id="selFormats" value="#{ReportWorkspaceBean.outputFormats}"/>
-						</h:selectOneMenu>
+						</h:selectOneMenu>	--%>
 					</div>
 				</h:panelGroup>	
 			</div>
